--- a/you_map_2.0_front/you_map_2.0/package.json
+++ b/you_map_2.0_front/you_map_2.0/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@firebase/database": "^1.0.1",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
