--- a/you_map_2.0_front/you_map_2.0/package.json
+++ b/you_map_2.0_front/you_map_2.0/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@firebase/database": "^1.0.1",
+    "@mui/material": "^5.15.20",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
